# autorally

autorally_control/: CMakeLists.txt  package.xml
autorally_control/cfg/: PathIntegralParams.cfg
autorally_control/include/autorally_control/path_integral/: autorally_plant.h  costs.cu  costs.cuh  debug_kernels.cuh  mppi_controller.cuh  mppi_controller.cut  obs_costs.cu  obs_costs.cuh  param_getter.h  run_control_loop.cuh
autorally_control/launch/: path_integral_nn.launch  path_integral_nn_obs.launch
autorally_control/src/path_integral/: CMakeLists.txt  autorally_plant.cpp  path_integral_main.cu  status_monitor.cpp
autorally_control/src/path_integral/params/maps/gazebo/: obstacle_track_data.txt  read_track.ipynb
autorally_control/src/path_integral/scripts/: lap_stats.py
autorally_core/src/StateEstimator/: StateEstimator.cpp
autorally_description/urdf/: autoRallyPlatform.urdf.xacro  populated_obstacles_AR.world  populated_one_obstacle_AR.world  populated_two_obstacles_AR.world
autorally_description/urdf/models/blended_track/: model.sdf
autorally_description/urdf/models/track/: model.sdf
autorally_gazebo/: CMakeLists.txt  package.xml
autorally_gazebo/launch/: autoRallyTrackGazeboSim.launch  autoRallyTrackObstaclesGazeboSim.launch  autoRallyTrackWorld.launch
autorally_gazebo/nodes/: get_state.py  obstacle_factory_example.py
autorally_gazebo/plugins/: CMakeLists.txt  hello_world.cpp  obstacles_factory.cpp  spawn_obstacles.cpp
autorally_msgs/: CMakeLists.txt
autorally_msgs/msg/: learnerState.msg  mppiCost.msg  spawnObstacles.msg
autorally_util/: setupEnvVariables.sh
autorally_util/config/: chassisCommandPriorities.yaml
